# todo-api

./: .gitignore  pyproject.toml
api/: permissions.py  serializers.py  urls.py  views.py
core/: settings.py  urls.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
